added refs, formatting, made jay models 1 and 2, and toutouwai model 1

--- a/Files/rrs/mi.bib
+++ b/Files/rrs/mi.bib
@@ -1,3 +1,5 @@
+
+
 @article{dingemanse2013between,
   title={Between-individual differences in behavioural plasticity within populations: causes and consequences},
   author={Dingemanse, Niels J and Wolf, Max},
@@ -3564,6 +3566,30 @@ url = {http://florianhartig.github.io/DHARMa/},
   address      = {Vienna, Austria},
   year         = {2017},
   url          = {https://www.R-project.org}
+}
+
+@Manual{cmdstanr,
+  title        = {Cmdstanr: R interface to 'CmdStan'},
+  author       = {Gabry, J and Češnovar, R and },
+  year         = {2022},
+  url          = {https://mc-stan.org/cmdstanr/}
+}
+
+@article{gamer2012package,
+  title={Package ‘irr’},
+  author={Gamer, Matthias and Lemon, Jim and Gamer, Maintainer Matthias and Robinson, A and Kendall’s, W},
+  journal={Various coefficients of interrater reliability and agreement},
+  volume={22},
+  year={2012}
+}
+
+@incollection{xie2018knitr,
+  title={knitr: a comprehensive tool for reproducible research in R},
+  author={Xie, Yihui},
+  booktitle={Implementing reproducible research},
+  pages={3--31},
+  year={2018},
+  publisher={Chapman and Hall/CRC}
 }
 
 @misc{bates2012lme4,
